crates/toml/tests/snapshots/invalid/array/text-after-array-entries.stderr
TOML parse error at line 3, column 3
  |
3 |   "Entry"
  |   ^
missing comma between array elements, expected `,`

---
TOML parse error at line 2, column 46
  |
2 |   "Is there life after an array separator?", No
  |                                              ^^
invalid float, expected `nan`
